Made small adjustments and corrected layout issues, ui-3

--- a/less/footer.less
+++ b/less/footer.less
@@ -6,7 +6,8 @@ footer .foot{
     width: 95%;
     margin: 0 2%;
     padding-top: 5%;
-    padding-bottom: 4%;
+    padding-bottom: 2%;
+    // background-color: #F5F5F5;
     // padding: 10%;
     @media @mobile {
         display: none;
